feature: 16Mhz crystal oscillator

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,9 +15,9 @@ endif()
 set(DEVICE     t2313)
 set(MCU        attiny2313)
 # set(MCU    atmega328p)
-set(F_CPU  9600000UL)
-set(BAUD   19200)
-set(FUSES  -U lfuse:w:0xe4:m -U hfuse:w:0xdd:m -U efuse:w:0xff:m)
+set(F_CPU   16E6)
+set(BAUD    19200)
+set(FUSES   -U lfuse:w:0xde:m -U hfuse:w:0xdf:m -U efuse:w:0xff:m)
 
 add_definitions(-DF_CPU=${F_CPU})
 add_definitions(-D__AVR_ATtiny2313__)
